[workspace]
members = [".", "ci/big_serde", "ci/big_rand", "ci/big_quickcheck"]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
num-bigint-dig = { path = "." }
num-integer = { version = "0.1.46", default-features = false, features = ["i128"] }
num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
rand = { git = "https://github.com/earthlings-dev/rand.git", default-features = false }
rand_chacha = "0.10"
rand_isaac = "0.5"
rand_xorshift = "0.5"
serde = { version = "1.0", default-features = false }
serde_test = "1.0"
quickcheck = { version = "1", default-features = false }
quickcheck_macros = "1"
arbitrary = { version = "1", default-features = false }

[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "The Rust Project Developers"]
description = "Big integer implementation for Rust with cryptographic extensions"
documentation = "https://docs.rs/num-bigint-dig"
homepage = "https://github.com/earthlings-dev/num-bigint-dig"
keywords = ["mathematics", "numerics", "bignum", "cryptography"]
categories = ["algorithms", "data-structures", "science", "cryptography"]
license = "MIT OR Apache-2.0"
name = "num-bigint-dig"
repository = "https://github.com/earthlings-dev/num-bigint-dig"
version = "0.10.0"
readme = "README.md"
exclude = ["/ci/*", "/.github/*"]
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["num-integer/std", "num-traits/std"]
arbitrary = ["dep:arbitrary"]
quickcheck = ["dep:quickcheck"]
rand = ["dep:rand"]
serde = ["dep:serde"]
prime = ["rand", "std", "rand/std_rng", "rand/thread_rng"]
zeroize = ["dep:zeroize"]

[package.metadata.docs.rs]
features = ["std", "serde", "rand", "quickcheck", "arbitrary", "prime", "zeroize"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bigint"

[[bench]]
name = "factorial"

[[bench]]
name = "gcd"

[[bench]]
name = "roots"

[[bench]]
harness = false
name = "shootout-pidigits"

[dependencies.num-integer]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.quickcheck]
workspace = true
optional = true

[dependencies.arbitrary]
workspace = true
optional = true

[dependencies.zeroize]
version = "1.8"
default-features = false
optional = true

[dev-dependencies]
rand_xorshift.workspace = true
rand_chacha.workspace = true
rand_isaac.workspace = true
