[package]
name = "big_quickcheck"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
num-bigint-dig = { workspace = true, features = ["quickcheck"] }
num-integer = { workspace = true }
num-traits = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
