[package]
name = "big_rand"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
num-bigint-dig = { workspace = true, features = ["rand"] }
num-traits = { workspace = true }
rand = { workspace = true, features = ["std", "thread_rng"] }
rand_chacha = { workspace = true }
rand_isaac = { workspace = true }
rand_xorshift = { workspace = true }
